minor fix
Allowed for tracking while horizontal scrolling and zooming for the animation, also fixed a spelling error, and optimized some css code.

--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ ul {
   background-color: #F3ADE3;
   border: 2px solid #A66597;
   max-width: 1220px;
-  min-width: 740px;
+  min-width: 745px;
 }
 
 #midbox {
